--- a/nfl-league-frontend/src/app/components/header/header.component.html
+++ b/nfl-league-frontend/src/app/components/header/header.component.html
@@ -1,1 +1,13 @@
-
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#">LOGO</a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Teams</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
